--- a/Agricola_Front/images/IMG_0404.qrc
+++ b/Agricola_Front/images/IMG_0404.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="newPrefix">
+    <file>round_circle.svg</file>
     <file>harvest.png</file>
     <file>KakaoTalk_Photo_2024-05-31-15-59-59_011-removebg-preview.png</file>
     <file>IMG_0403.PNG</file>
