--- a/Agricola_Front/mainwindow_v1.ui
+++ b/Agricola_Front/mainwindow_v1.ui
@@ -83,10 +83,10 @@
         <item>
          <widget class="QStackedWidget" name="stackedWidget">
           <property name="currentIndex">
-           <number>0</number>
+           <number>1</number>
           </property>
           <widget class="QWidget" name="round">
-           <layout class="QHBoxLayout" name="horizontalLayout_5" stretch="2,3">
+           <layout class="QHBoxLayout" name="horizontalLayout_5" stretch="1,1">
             <property name="spacing">
              <number>0</number>
             </property>
@@ -107,169 +107,102 @@
               <property name="spacing">
                <number>0</number>
               </property>
-              <item row="3" column="2">
-               <layout class="QVBoxLayout" name="verticalLayout_12"/>
-              </item>
               <item row="0" column="0">
-               <layout class="QVBoxLayout" name="verticalLayout_4"/>
+               <layout class="QVBoxLayout" name="basic_0"/>
               </item>
               <item row="1" column="0">
-               <layout class="QVBoxLayout" name="verticalLayout_7"/>
-              </item>
-              <item row="4" column="1">
-               <layout class="QVBoxLayout" name="verticalLayout_13"/>
-              </item>
-              <item row="1" column="1">
-               <layout class="QVBoxLayout" name="verticalLayout_6"/>
+               <layout class="QVBoxLayout" name="basic_1"/>
               </item>
               <item row="2" column="0">
-               <layout class="QVBoxLayout" name="verticalLayout_8"/>
-              </item>
-              <item row="2" column="1">
-               <layout class="QVBoxLayout" name="verticalLayout_9"/>
+               <layout class="QVBoxLayout" name="basic_2"/>
               </item>
               <item row="3" column="0">
-               <layout class="QVBoxLayout" name="verticalLayout_11"/>
-              </item>
-              <item row="0" column="1">
-               <layout class="QVBoxLayout" name="verticalLayout_5"/>
-              </item>
-              <item row="3" column="1">
-               <layout class="QVBoxLayout" name="verticalLayout_10"/>
+               <layout class="QVBoxLayout" name="basic_3"/>
               </item>
               <item row="4" column="0">
-               <layout class="QVBoxLayout" name="verticalLayout_14"/>
+               <layout class="QVBoxLayout" name="basic_4"/>
               </item>
-              <item row="4" column="2">
-               <layout class="QVBoxLayout" name="verticalLayout_15"/>
+              <item row="0" column="1">
+               <layout class="QVBoxLayout" name="basic_5"/>
               </item>
-              <item row="2" column="2">
-               <layout class="QVBoxLayout" name="verticalLayout_16"/>
+              <item row="1" column="1">
+               <layout class="QVBoxLayout" name="basic_6"/>
               </item>
-              <item row="1" column="2">
-               <layout class="QVBoxLayout" name="verticalLayout_17"/>
+              <item row="2" column="1">
+               <layout class="QVBoxLayout" name="basic_7"/>
+              </item>
+              <item row="3" column="1">
+               <layout class="QVBoxLayout" name="basic_8"/>
+              </item>
+              <item row="4" column="1">
+               <layout class="QVBoxLayout" name="basic_9"/>
               </item>
               <item row="0" column="2">
-               <layout class="QVBoxLayout" name="verticalLayout_18"/>
+               <layout class="QVBoxLayout" name="basic_10"/>
+              </item>
+              <item row="1" column="2">
+               <layout class="QVBoxLayout" name="basic_11"/>
+              </item>
+              <item row="2" column="2">
+               <layout class="QVBoxLayout" name="basic_12"/>
+              </item>
+              <item row="3" column="2">
+               <layout class="QVBoxLayout" name="basic_13"/>
+              </item>
+              <item row="4" column="2">
+               <layout class="QVBoxLayout" name="basic_14"/>
               </item>
              </layout>
             </item>
             <item>
-             <layout class="QGridLayout" name="gridLayout" rowstretch="1,1,1,1" columnstretch="1,1,1,1,0" rowminimumheight="1,1,1,1" columnminimumwidth="1,1,1,1,0">
+             <layout class="QGridLayout" name="gridLayout" rowstretch="1,1,1,1,1" columnstretch="1,1,1">
               <property name="spacing">
                <number>0</number>
               </property>
               <item row="0" column="0">
-               <layout class="QVBoxLayout" name="roundCard_0">
-                <property name="spacing">
-                 <number>0</number>
-                </property>
-               </layout>
-              </item>
-              <item row="0" column="1">
-               <layout class="QVBoxLayout" name="roundCard_1">
-                <property name="spacing">
-                 <number>0</number>
-                </property>
-               </layout>
-              </item>
-              <item row="0" column="2">
-               <layout class="QVBoxLayout" name="roundCard_2">
-                <property name="spacing">
-                 <number>0</number>
-                </property>
-               </layout>
-              </item>
-              <item row="0" column="3">
-               <layout class="QVBoxLayout" name="roundCard_3">
-                <property name="spacing">
-                 <number>0</number>
-                </property>
-               </layout>
-              </item>
-              <item row="3" column="1">
-               <layout class="QVBoxLayout" name="roundCard_13">
-                <property name="spacing">
-                 <number>0</number>
-                </property>
-               </layout>
-              </item>
-              <item row="3" column="0">
-               <layout class="QVBoxLayout" name="roundCard_12">
-                <property name="spacing">
-                 <number>0</number>
-                </property>
-               </layout>
-              </item>
-              <item row="3" column="2">
-               <layout class="QVBoxLayout" name="roundCard_14">
-                <property name="spacing">
-                 <number>0</number>
-                </property>
-               </layout>
-              </item>
-              <item row="3" column="3">
-               <layout class="QVBoxLayout" name="roundCard_15">
-                <property name="spacing">
-                 <number>0</number>
-                </property>
-               </layout>
-              </item>
-              <item row="2" column="3">
-               <layout class="QVBoxLayout" name="roundCard_11">
-                <property name="spacing">
-                 <number>0</number>
-                </property>
-               </layout>
-              </item>
-              <item row="2" column="2">
-               <layout class="QVBoxLayout" name="roundCard_10">
-                <property name="spacing">
-                 <number>0</number>
-                </property>
-               </layout>
-              </item>
-              <item row="2" column="1">
-               <layout class="QVBoxLayout" name="roundCard_9">
-                <property name="spacing">
-                 <number>0</number>
-                </property>
-               </layout>
-              </item>
-              <item row="2" column="0">
-               <layout class="QVBoxLayout" name="roundCard_8">
-                <property name="spacing">
-                 <number>0</number>
-                </property>
-               </layout>
-              </item>
-              <item row="1" column="3">
-               <layout class="QVBoxLayout" name="roundCard_7">
-                <property name="spacing">
-                 <number>0</number>
-                </property>
-               </layout>
-              </item>
-              <item row="1" column="2">
-               <layout class="QVBoxLayout" name="roundCard_6">
-                <property name="spacing">
-                 <number>0</number>
-                </property>
-               </layout>
-              </item>
-              <item row="1" column="1">
-               <layout class="QVBoxLayout" name="roundCard_5">
-                <property name="spacing">
-                 <number>0</number>
-                </property>
-               </layout>
+               <layout class="QVBoxLayout" name="basic_15"/>
               </item>
               <item row="1" column="0">
-               <layout class="QVBoxLayout" name="roundCard_4">
-                <property name="spacing">
-                 <number>0</number>
-                </property>
-               </layout>
+               <layout class="QVBoxLayout" name="basic_16"/>
+              </item>
+              <item row="2" column="0">
+               <layout class="QVBoxLayout" name="basic_17"/>
+              </item>
+              <item row="3" column="0">
+               <layout class="QVBoxLayout" name="basic_18"/>
+              </item>
+              <item row="4" column="0">
+               <layout class="QVBoxLayout" name="basic_19"/>
+              </item>
+              <item row="0" column="1">
+               <layout class="QVBoxLayout" name="basic_20"/>
+              </item>
+              <item row="1" column="1">
+               <layout class="QVBoxLayout" name="basic_21"/>
+              </item>
+              <item row="2" column="1">
+               <layout class="QVBoxLayout" name="basic_22"/>
+              </item>
+              <item row="3" column="1">
+               <layout class="QVBoxLayout" name="basic_23"/>
+              </item>
+              <item row="4" column="1">
+               <layout class="QVBoxLayout" name="basic_24"/>
+              </item>
+              <item row="0" column="2">
+               <layout class="QVBoxLayout" name="basic_25"/>
+              </item>
+              <item row="1" column="2">
+               <layout class="QVBoxLayout" name="basic_26"/>
+              </item>
+              <item row="2" column="2">
+               <layout class="QVBoxLayout" name="basic_27"/>
+              </item>
+              <item row="3" column="2">
+               <layout class="QVBoxLayout" name="basic_28"/>
+              </item>
+              <item row="4" column="2">
+               <layout class="QVBoxLayout" name="basic_29"/>
               </item>
              </layout>
             </item>
